syntax = "proto3";
package wechaty.puppet;

option go_package="github.com/wechaty/go-wechaty/wechaty-puppet-hostie/generate/wechaty/puppet";

import "google/protobuf/wrappers.proto";

message RoomInvitationPayloadRequest {
  string                      id      = 1;
  google.protobuf.StringValue payload = 2;
}
message RoomInvitationPayloadResponse {
  string   id                = 1;
  string   inviter_id        = 2;
  string   topic             = 3;
  uint32   member_count      = 4;
  repeated string member_ids = 5;
  uint64   timestamp         = 6;
  string   avatar            = 7;
  string   invitation        = 8;
  string   receiver_id       = 9;
}

message RoomInvitationAcceptRequest {
  string id = 1;
}
message RoomInvitationAcceptResponse {}
