syntax = "proto3";
package wechaty.puppet;

option go_package="github.com/wechaty/go-wechaty/wechaty-puppet-hostie/generate/wechaty/puppet";

import "google/protobuf/wrappers.proto";

message TagContactAddRequest {
  string id = 1;
  string contact_id = 2;
}
message TagContactAddResponse {}

message TagContactRemoveRequest {
  string id = 1;
  string contact_id = 2;
}
message TagContactRemoveResponse {}

message TagContactDeleteRequest {
  string id = 1;
}
message TagContactDeleteResponse {}

message TagContactListRequest {
  google.protobuf.StringValue contact_id = 1;
}
message TagContactListResponse {
  repeated string ids = 1;
}
